examples/test/testpolicy1286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1286
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key16: value22
      key7: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value4
          key34: value3
      podSelector:
        matchLabels:
          key33: value24
          key46: value19
          key43: value34
